Estilizando pg de perfil como login

--- a/frontend/pages/perfil.html
+++ b/frontend/pages/perfil.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil - GastroWish</title>
-    <link rel="stylesheet" href="../assets/css/profile.css">
+    <link rel="stylesheet" href="../assets/css/perfil.css">
 </head>
 <body>
+    <!-- Added background stripe as in login page -->
+    <div class="background-stripe"></div>
     <main class="profile-container">
         <h1>Editar Perfil</h1>
         <form id="form-profile" enctype="multipart/form-data">
@@ -43,6 +45,6 @@
             <button type="submit">Salvar</button>
         </form>
     </main>
-    <script src="../assets/js/profile.js"></script>
+    <script src="../assets/js/perfil.js"></script>
 </body>
 </html>
