--- a/frontend/pages/restaurantes.html
+++ b/frontend/pages/restaurantes.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Restaurantes - GastroWish</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,14 +30,26 @@
                 <i class="fas fa-heart"></i>
                 <span>Lista de Desejos</span>
             </a>
-            <a href="perfil.html">
-                <i class="fas fa-user"></i>
-                <span>Perfil</span>
-            </a>
-            <a href="login.html" class="logout-btn">
-                <i class="fas fa-sign-out-alt"></i>
-                <span>Sair</span>
-            </a>
+            <div class="profile-dropdown">
+                <button class="profile-trigger">
+                    <img src="/assets/css/img/default-avatar.jpg" 
+                         alt="Profile" 
+                         class="profile-image"
+                         loading="lazy"
+                         onerror="this.src='/assets/css/img/default-avatar.jpg'">
+                    <span class="profile-name">Usuário</span>
+                </button>
+                <div class="dropdown-menu">
+                    <a href="perfil.html" class="dropdown-item">
+                        <i class="fas fa-user"></i>
+                        <span>Perfil</span>
+                    </a>
+                    <a href="login.html" class="dropdown-item">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>Sair</span>
+                    </a>
+                </div>
+            </div>
         </nav>
     </header>
 
